# demo

./: .gitignore  404.html  README.md  generate_changelog.py  index.html  mkdocs.yml  pom.xml  pyproject.toml  requirements.txt  update_changelog.py
.github/workflows/: build-python.yml  ci.yaml  ci.yml  codeql.yml  demo-release-pypi-docker-hub.yml  linters.yml  release-docs.yml  run-pytest.yml  test-pypi.yml  update-changelog.yml
CHANGELOG/: index.html
about/: index.html
docker/: Dockerfile
docs/: CHANGELOG.md  about.md  index.md  requirements-docs.txt
paig-securechat/docker/: Dockerfile
search/: search_index.json
user_manager/: .coveragerc  README.md  __main__.py  server.py
user_manager/api/: crud.py
user_manager/db_model/: models.py
user_manager/factory/: database.py
user_manager/tests/: conftest.py  test_api.py  test_api_curd_operation.py  test_main.py
user_manager/user_schema/: schemas.py
